--- a/public/html_files/clothes.ejs
+++ b/public/html_files/clothes.ejs
@@ -30,6 +30,14 @@
 
     <div class="nav-links">
         <ul>
+            <li>
+                <form action="/cloth" method="post">
+                    <select name="currency">
+                        <option value="USD">USD</option>
+                        <option value="KZT">KZT</option>
+                        <option value="RUB">RUB</option>
+                    </select><input type="submit"></form>
+            </li>
             <li><a href="home">Home</a></li>
             <li><a href="cloth">Clothes</a></li>
             <li><a href="shoes">Shoes</a></li>
@@ -82,7 +90,7 @@
         <div class="product-box">
             <img src="../Clothes/regfit.png" alt="" class="product-img">
             <h2 class="product-title">Shirt Regular fit</h2>
-            <span class="price">$19.99</span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -91,7 +99,7 @@
         <div class="product-box">
             <img src="../Clothes/relfit.png" alt="" class="product-img">
             <h2 class="product-title">Shirt Relaxed fit</h2>
-            <span class="price">$39.99</span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -100,7 +108,7 @@
         <div class="product-box">
             <img src="../Clothes/Joggers.png" alt="" class="product-img">
             <h2 class="product-title">Joggers</h2>
-            <span class="price">$49.99</span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -109,7 +117,7 @@
         <div class="product-box">
             <img src="../Clothes/sweatshirt.png" alt="" class="product-img">
             <h2 class="product-title">Sweatshirt</h2>
-            <span class="price">$64.99</span>
+            <span class="price"><%= Math.round(ans)*15 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -118,7 +126,7 @@
         <div class="product-box">
             <img src="../Clothes/twoHoodie.png" alt="" class="product-img">
             <h2 class="product-title">Two Hoodies /b+w</h2>
-            <span class="price">$89.99</span>
+            <span class="price"><%= Math.round(ans)*35 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -127,7 +135,7 @@
         <div class="product-box">
             <img src="../Clothes/jeans.png" alt="" class="product-img">
             <h2 class="product-title">Jeans</h2>
-            <span class="price">$99.99</span>
+            <span class="price"><%= Math.round(ans)*40 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -136,7 +144,7 @@
         <div class="product-box">
             <img src="../Clothes/twoTshirt.png" alt="" class="product-img">
             <h2 class="product-title">Two T-shirts /b+w</h2>
-            <span class="price">$39.99</span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -145,7 +153,7 @@
         <div class="product-box">
             <img src="../Clothes/wCoat.png" alt="" class="product-img">
             <h2 class="product-title">Coat /br/wm</h2>
-            <span class="price">$119.99</span>
+            <span class="price"><%= Math.round(ans)*35 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -153,7 +161,7 @@
         <div class="product-box">
             <img src="../Clothes/whiteJacket.png" alt="" class="product-img">
             <h2 class="product-title">Jacket</h2>
-            <span class="price">$79.99</span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -162,7 +170,7 @@
         <div class="product-box">
             <img src="../Clothes/wJacket.png" alt="" class="product-img">
             <h2 class="product-title">Jacket | 2020</h2>
-            <span class="price">$99.99</span>
+            <span class="price"><%= Math.round(ans)*15 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -171,7 +179,7 @@
         <div class="product-box">
             <img src="../Clothes/wTrousers.png" alt="" class="product-img">
             <h2 class="product-title">Trousers /b/wm</h2>
-            <span class="price">$49.99</span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -180,7 +188,7 @@
         <div class="product-box">
             <img src="../Clothes/bJoggers.png" alt="" class="product-img">
             <h2 class="product-title">Jogger /b/mn</h2>
-            <span class="price">$44.99</span>
+            <span class="price"><%= Math.round(ans)*40 %> <%=c%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -193,7 +201,7 @@
         <p>If you have any questions, please contact us on these social networks </p>
         <ul class="socials">
             <li><a href="https://www.facebook.com/profile.php?id=100078459212054&sk=about"><i
-                    class="fa fa-facebook"></i></a></li>
+                            class="fa fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/MeirkhanA"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.youtube.com/channel/UCo9K3OdfyUlujvBFHV11oDQ"><i class="fa fa-youtube"></i></a>
