sample commit to make sure everything works

--- a/public/html_files/shoe.ejs
+++ b/public/html_files/shoe.ejs
@@ -87,7 +87,7 @@
         <div class="product-box">
             <img src="../sneakers/air2.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -96,7 +96,7 @@
         <div class="product-box">
             <img src="../sneakers/airj.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -105,7 +105,7 @@
         <div class="product-box">
             <img src="../sneakers/pink.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -114,7 +114,7 @@
         <div class="product-box">
             <img src="../sneakers/italy.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -123,7 +123,7 @@
         <div class="product-box">
             <img src="../sneakers/mon.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -132,7 +132,7 @@
         <div class="product-box">
             <img src="../sneakers/airf.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -141,7 +141,7 @@
         <div class="product-box">
             <img src="../sneakers/red.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -150,7 +150,7 @@
         <div class="product-box">
             <img src="../sneakers/orange.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -159,7 +159,7 @@
         <div class="product-box">
             <img src="../sneakers/green.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -168,7 +168,7 @@
         <div class="product-box">
             <img src="../sneakers/grey.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -177,7 +177,7 @@
         <div class="product-box">
             <img src="../sneakers/off.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
@@ -186,7 +186,7 @@
         <div class="product-box">
             <img src="../Clothes/white.png" alt="" class="product-img">
             <h2 class="product-title">Nike/ Sneakers</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Order</a>
             </div>
