--- a/public/html_files/access.ejs
+++ b/public/html_files/access.ejs
@@ -60,7 +60,7 @@
         <div class="product-box">
             <img src="../Accessory/pandora1.png" alt="" class="product-img">
             <h2 class="product-title">Pandora Moments Bracelete</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -69,7 +69,7 @@
         <div class="product-box">
             <img src="../Accessory/pandora2.png" alt="" class="product-img">
             <h2 class="product-title">Pandora x StarWars Bracelete</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -78,7 +78,7 @@
         <div class="product-box">
             <img src="../Accessory/pandora3.png" alt="" class="product-img">
             <h2 class="product-title">Pandora ME Bracelete</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -87,7 +87,7 @@
         <div class="product-box">
             <img src="../Accessory/ring1.png" alt="" class="product-img">
             <h2 class="product-title">Pandora Ring Tiara</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -96,7 +96,7 @@
         <div class="product-box">
             <img src="../Accessory/ring2.png" alt="" class="product-img">
             <h2 class="product-title">Pandora Ring Sparkling Heart</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -105,7 +105,7 @@
         <div class="product-box">
             <img src="../Accessory/ring3.png" alt="" class="product-img">
             <h2 class="product-title">Pandora Ring LOVE ME</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -113,7 +113,7 @@
         <div class="product-box">
             <img src="../Accessory/Earrings1.png" alt="" class="product-img">
             <h2 class="product-title">Pandora Earrings Sparkling Heart</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -122,7 +122,7 @@
         <div class="product-box">
             <img src="../Accessory/Earrings2.png" alt="" class="product-img">
             <h2 class="product-title">Pandora Earrings Brilliant Oval</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -131,7 +131,7 @@
         <div class="product-box">
             <img src="../Accessory/Earrings3.png" alt="" class="product-img">
             <h2 class="product-title">Earrings Earrings Golden Snitch, Harry Potter</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
