--- a/public/html_files/clothes.ejs
+++ b/public/html_files/clothes.ejs
@@ -90,7 +90,7 @@
         <div class="product-box">
             <img src="../Clothes/regfit.png" alt="" class="product-img">
             <h2 class="product-title">Shirt Regular fit</h2>
-            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -99,7 +99,7 @@
         <div class="product-box">
             <img src="../Clothes/relfit.png" alt="" class="product-img">
             <h2 class="product-title">Shirt Relaxed fit</h2>
-            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -108,7 +108,7 @@
         <div class="product-box">
             <img src="../Clothes/Joggers.png" alt="" class="product-img">
             <h2 class="product-title">Joggers</h2>
-            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -117,7 +117,7 @@
         <div class="product-box">
             <img src="../Clothes/sweatshirt.png" alt="" class="product-img">
             <h2 class="product-title">Sweatshirt</h2>
-            <span class="price"><%= Math.round(ans)*15 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*15 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -126,7 +126,7 @@
         <div class="product-box">
             <img src="../Clothes/twoHoodie.png" alt="" class="product-img">
             <h2 class="product-title">Two Hoodies /b+w</h2>
-            <span class="price"><%= Math.round(ans)*35 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*35 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -135,7 +135,7 @@
         <div class="product-box">
             <img src="../Clothes/jeans.png" alt="" class="product-img">
             <h2 class="product-title">Jeans</h2>
-            <span class="price"><%= Math.round(ans)*40 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*40 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -144,7 +144,7 @@
         <div class="product-box">
             <img src="../Clothes/twoTshirt.png" alt="" class="product-img">
             <h2 class="product-title">Two T-shirts /b+w</h2>
-            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -153,7 +153,7 @@
         <div class="product-box">
             <img src="../Clothes/wCoat.png" alt="" class="product-img">
             <h2 class="product-title">Coat /br/wm</h2>
-            <span class="price"><%= Math.round(ans)*35 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*35 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -161,7 +161,7 @@
         <div class="product-box">
             <img src="../Clothes/whiteJacket.png" alt="" class="product-img">
             <h2 class="product-title">Jacket</h2>
-            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -170,7 +170,7 @@
         <div class="product-box">
             <img src="../Clothes/wJacket.png" alt="" class="product-img">
             <h2 class="product-title">Jacket | 2020</h2>
-            <span class="price"><%= Math.round(ans)*15 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*15 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -179,7 +179,7 @@
         <div class="product-box">
             <img src="../Clothes/wTrousers.png" alt="" class="product-img">
             <h2 class="product-title">Trousers /b/wm</h2>
-            <span class="price"><%= Math.round(ans)*20 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*20 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
@@ -188,7 +188,7 @@
         <div class="product-box">
             <img src="../Clothes/bJoggers.png" alt="" class="product-img">
             <h2 class="product-title">Jogger /b/mn</h2>
-            <span class="price"><%= Math.round(ans)*40 %> <%=c%></span>
+            <span class="price"><%= Math.round(ans)*40 %> <%=holder%></span>
             <div class="btn">
                 <a href="#">Create order</a>
             </div>
