some intense coding stuff

--- a/public/html_files/clothes.ejs
+++ b/public/html_files/clothes.ejs
@@ -52,7 +52,7 @@
     <div class="orderContainer">
         <div class="orderBody">
             <p>Create Order</p>
-            <form action="">
+            <form action="/" method="post">
                 <input type="text" class="name" placeholder="Name" pattern="[A-Za-z]{3,}" title="Only letters">
                 <input type="text" class="phone" placeholder="Phone number" pattern="[0-9]{11}" title="Only 11 numbers">
                 <input type="text" class="mail" placeholder="E-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
