--- a/public/html_files/UserAccount.ejs
+++ b/public/html_files/UserAccount.ejs
@@ -16,7 +16,7 @@
                     <div class="card-body">
                         <img src="gray.jpg" class="rounded-circle" width="150" alt="">
                         <div class="mt-3">
-                            <h3>Meirkhan Kuanyshev</h3>
+                            <h3><%=name%></h3>
                             <a href="">⠀</a>
                             <a href="home">Home</a>
                             <a href="">Support</a>
@@ -35,7 +35,7 @@
                                 <h5>Full Name</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                                Binara Abdullayeva
+                                <%=name%>
                             </div>
                         </div>
                         <hr>
@@ -44,7 +44,7 @@
                                 <h5>Email</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                                sdvewgwg@gmail.com
+                                <%=email%>
                             </div>
                         </div>
                         <hr>
@@ -53,16 +53,16 @@
                                 <h5>Phone</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                                8 777 777 77 77
+                                <%=phone%>
                             </div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-md-3">
-                                <h5>Adress</h5>
+                                <h5>Address</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                                Expo C1.15.879
+                                <%=city%> and post index = <%=pIndex%>
                             </div>
                         </div>
                     </div>
