--- a/public/html_files/shoe.ejs
+++ b/public/html_files/shoe.ejs
@@ -70,6 +70,7 @@
             <li><a href="shoes">Shoes</a></li>
             <li><a href="accessories">Accessories</a></li>
             <li><a href="profile">Profile</a></li>
+            <li><a href="user">Log In</a></li>
         </ul>
     </div>
 </div>
