--- a/public/html_files/home.ejs
+++ b/public/html_files/home.ejs
@@ -45,12 +45,12 @@
                     <i class='bx bx-play bx-lg'></i>
                 </button>
             </a></li>
-            <li><a href="home">Home</a></li>
-            <li><a href="cloth">Clothes</a></li>
-            <li><a href="shoes">Shoes</a></li>
-            <li><a href="accessories">Accessories</a></li>
-            <li><a href="profile">Profile</a></li>
-            <li><a href="user">Log In</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/trident">Log In</a></li>
         </ul>
     </div>
 </div>
