--- a/public/html_files/shoe.ejs
+++ b/public/html_files/shoe.ejs
@@ -58,19 +58,19 @@
     <div class="nav-links">
         <ul>
             <li>
-                <form action="/cloth" method="post">
+                <form action="/shoes" method="post">
                     <select name="currency">
                         <option value="USD">USD</option>
                         <option value="KZT">KZT</option>
                         <option value="RUB">RUB</option>
                     </select><input type="submit"></form>
             </li>
-            <li><a href="home">Home</a></li>
-            <li><a href="cloth">Clothes</a></li>
-            <li><a href="shoes">Shoes</a></li>
-            <li><a href="accessories">Accessories</a></li>
-            <li><a href="profile">Profile</a></li>
-            <li><a href="user">Log In</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/trident">Log In</a></li>
         </ul>
     </div>
 </div>
