--- a/public/html_files/clothes.ejs
+++ b/public/html_files/clothes.ejs
@@ -38,12 +38,12 @@
                         <option value="RUB">RUB</option>
                     </select><input type="submit"></form>
             </li>
-            <li><a href="home">Home</a></li>
-            <li><a href="cloth">Clothes</a></li>
-            <li><a href="shoes">Shoes</a></li>
-            <li><a href="accessories">Accessories</a></li>
-            <li><a href="profile">Profile</a></li>
-            <li><a href="user">Log In</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/trident">Log In</a></li>
         </ul>
     </div>
 </div>
