trident removed, added: seller page, profile for seller/customer

--- a/front/adminPage/read.ejs
+++ b/front/adminPage/read.ejs
@@ -118,7 +118,7 @@
         <li class="list-inline-item"><a href="https://shrouded-chamber-34995.herokuapp.com/">our teacher's website!</a>
         </li>
     </ul>
-    <form action="/admin/logout" method="POST">
+    <form action="/logout" method="POST">
         <button>Logout</button>
     </form>
 </footer>
