--- a/public/html_files/shoe.ejs
+++ b/public/html_files/shoe.ejs
@@ -70,7 +70,7 @@
             <li><a href="/shoes">Shoes</a></li>
             <li><a href="/accessories">Accessories</a></li>
             <li><a href="/profile">Profile</a></li>
-            <li><a href="/trident">Log In</a></li>
+<!--            <li><a href="/login">Log In</a></li>-->
         </ul>
     </div>
 </div>
