--- a/front/login.ejs
+++ b/front/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login for Admin</title>
+    <title>Login form</title>
     <style>
         .login-form {
             width: 400px;
@@ -39,7 +39,7 @@
         <p style="color: red;"><%= err %></p>
     <% } %>
     <h3>Login Page</h3>
-    <form action="/admin/login" method="POST">
+    <form action="/login" method="POST">
         <div class="input-group">
             <label for="email">Email:</label>
             <input type="email" name="email" />
@@ -51,7 +51,7 @@
         <button>Login</button>
     </form>
     <p>New around?</p>
-    <a href="/admin/register">Register</a>
+    <a href="/register">Register</a>
 </div>
 </body>
 </html>
