--- a/front/sellerPage/deleteProd.ejs
+++ b/front/sellerPage/deleteProd.ejs
@@ -23,28 +23,31 @@
     <div class="container">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/admin" class="nav-link">Create</a></li>
-                <li class="nav-item"><a href="/admin/read" class="nav-link">Read</a></li>
-                <li class="nav-item"><a href="/admin/find" class="nav-link">Find</a></li>
-                <li class="nav-item"><a href="/admin/update" class="nav-link">Update</a></li>
-                <li class="nav-item"><a href="/admin/delete" class="nav-link active" aria-current="page">Delete</a></li>
+                <li class="nav-item"><a href="/seller/read" class="nav-link">My profile</a></li>
+                <li class="nav-item"><a href="/seller" class="nav-link">Create new</a></li>
+<!--                <li class="nav-item"><a href="/seller/stock" class="nav-link">Change Stock</a></li>-->
+                <li class="nav-item"><a href="/seller/update" class="nav-link">Update</a></li>
+                <li class="nav-item"><a href="/seller/delete" class="nav-link active" aria-current="page">Delete</a>
+                </li>
             </ul>
         </header>
     </div>
-
 </main>
 <main>
     <div class="container">
+        <% if(err) { %>
+            <p style="color: red;"><%= err %></p>
+        <% } %>
         <div class="col-md-7 col-lg-8">
-            <h4 class="mb-3">Delete</h4>
-            <form action="/admin/delete" class="needs-validation" novalidate method="POST">
+            <h4 class="mb-3">Delete your product</h4>
+            <form action="/seller/delete" class="needs-validation" novalidate method="POST">
                 <div class="row g-3">
                     <div class="col-sm-6">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="text" class="form-control" name="email" id="email" placeholder="" value=""
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" name="name" id="name" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
-                            Valid email is required.
+                            Valid name is required.
                         </div>
                     </div>
                 </div>
@@ -52,12 +55,27 @@
                 <button class="w-100 btn btn-primary btn-lg" type="submit">Delete</button>
                 <br><br>
                 <div class="row g-3">
-                    <% if(type != null){ %>
-                        <% if(type == 'None'){ %>
-                            <h5 class="mb-3">This user does not exist</h5>
-                        <% } else{ %>
-                            <h5 class="mb-3"><%= type %> <%= name %> successfully deleted!</h5>
-                        <% } %>
+                    <% if(prod.length === 0){ %>
+                        <h5 class="mb-3">Nothing to delete</h5>
+                    <% } else{ %>
+                        <h5 class="mb-3">Your products: </h5>
+                        <table>
+                            <tr>
+                                <td>Name</td>
+                                <td>Type</td>
+                                <td>Price (in $)</td>
+                                <td>Quantity</td>
+                            </tr>
+
+                            <% for(let i = 0;i < prod.length;i++){ %>
+                                <tr>
+                                    <td><%= prod[i].name %></td>
+                                    <td><%= prod[i].type %></td>
+                                    <td><%= prod[i].price %></td>
+                                    <td><%= prod[i].quantity %></td>
+                                </tr>
+                            <% } %>
+                        </table>
                     <% } %>
                 </div>
             </form>
