--- a/public/html_files/UserAccount.ejs
+++ b/public/html_files/UserAccount.ejs
@@ -16,12 +16,13 @@
                     <div class="card-body">
                         <img src="gray.jpg" class="rounded-circle" width="150" alt="">
                         <div class="mt-3">
-                            <h3><%=name%></h3>
                             <a href="">⠀</a>
-                            <a href="home">Home</a>
-                            <a href="">Support</a>
-                            <a href="">Settings</a>
-                            <a href="">Logout</a>
+                            <a href="/home">Home</a>
+                            <a href="">Edit</a>
+<!--                            <a href="">Settings</a>-->
+                            <form action="/logout" method="POST">
+                                <button>Logout</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -32,7 +33,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-3">
-                                <h5>Full Name</h5>
+                                <h5>Username</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
                                 <%=name%>
@@ -50,7 +51,7 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-3">
-                                <h5>Phone</h5>
+                                <h5>Phone number</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
                                 <%=phone%>
@@ -59,10 +60,19 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-3">
-                                <h5>Address</h5>
+                                <h5>City</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                                <%=city%> and post index = <%=pIndex%>
+                                <%=city%>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h5>Post Index</h5>
+                            </div>
+                            <div class="col-md-9 text-secondary">
+                                <%=pIndex%>
                             </div>
                         </div>
                     </div>
