--- a/public/front/adminPage/create.ejs
+++ b/public/front/adminPage/create.ejs
@@ -15,18 +15,34 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="css/headers.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../css_files/binarasAttempt.css">
 </head>
 <body>
+<div class="navnav">
+    <div class="nav-header">
+        <div class="nav-title">
+            DAMA
+        </div>
+    </div>
 
+    <div class="nav-links">
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </div>
+</div>
 <main>
     <div class="container">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/admin" class="nav-link">Create</a></li>
+                <li class="nav-item"><a href="/admin" class="nav-link active" aria-current="page">Create</a></li>
                 <li class="nav-item"><a href="/admin/read" class="nav-link">Read</a></li>
                 <li class="nav-item"><a href="/admin/find" class="nav-link">Find</a></li>
-                <li class="nav-item"><a href="/admin/update" class="nav-link active" aria-current="page">Update</a></li>
+                <li class="nav-item"><a href="/admin/update" class="nav-link">Update</a></li>
                 <li class="nav-item"><a href="/admin/delete" class="nav-link">Delete</a></li>
             </ul>
         </header>
@@ -40,36 +56,21 @@
             <p style="color: red;"><%= err %></p>
         <% } %>
         <div class="col-md-7 col-lg-8">
-            <h4 class="mb-3">Update Seller</h4>
-            <form action="/admin/update" class="needs-validation" method="POST">
+            <h4 class="mb-3">Create Seller</h4>
+            <h6 class="mb-3">Hello admin '<%=username%>'!</h6>
+            <form action="/admin" class="needs-validation" method="POST">
                 <div class="row g-3">
                     <div class="col-sm-6">
-                        <!--                        <label for="currEmail" class="form-label">Current Email</label>-->
-                        <!--                        <input type="text" class="form-control" name="currEmail" id="currEmail" placeholder=""-->
-                        <!--                               value="" required>-->
-                        <!--                        <div class="invalid-feedback">-->
-                        <!--                            Valid email is required.-->
-                        <!--                        </div>-->
-                        <label for="currUsername" class="form-label">Current Username</label>
-                        <input type="text" class="form-control" name="currUsername" id="currUsername" placeholder=""
-                               value="" required>
-                        <div class="invalid-feedback">
-                            Valid username is required.
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row g-3">
-                    <div class="col-sm-6">
-                        <label for="email" class="form-label">New Email</label>
+                        <label for="email" class="form-label">Email</label>
                         <input type="text" class="form-control" name="email" id="email" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
                             Valid email is required.
                         </div>
                     </div>
+
                     <div class="col-sm-6">
-                        <label for="username" class="form-label">New Username</label>
+                        <label for="username" class="form-label">Username</label>
                         <input type="text" class="form-control" name="username" id="username" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
@@ -77,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <label for="phone" class="form-label">New Phone</label>
+                        <label for="phone" class="form-label">Phone</label>
                         <input type="number" class="form-control" name="phone" id="phone" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
@@ -85,50 +86,31 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <label for="password" class="form-label">New Password</label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder=""
-                               value="" required>
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="password" id="password" placeholder="" value=""
+                               required>
                         <div class="invalid-feedback">
                             Valid password is required.
                         </div>
                     </div>
                 </div>
                 <br>
-                <button class="w-100 btn btn-primary btn-lg" type="submit">Update</button>
+
+                <button class="w-100 btn btn-primary btn-lg" type="submit">Create</button>
             </form>
-            <br>
-            <div class="row g-3">
-                <% if(newSeller != null){ %>
-                    <h5 class="mb-3">User '<%= oldSeller %>' successfully updated!</h5>
-                    <table>
-                        <tr>
-                            <td>Username</td>
-                            <td>Email</td>
-                            <td>Phone</td>
-                            <td>Password (Hashed)</td>
-                        </tr>
-                        <tr>
-                            <td><%= newSeller.username %></td>
-                            <td><%= newSeller.email %></td>
-                            <td><%= newSeller.phone %></td>
-                            <td><%= newSeller.password %></td>
-                        </tr>
-                    </table>
-                <% } %>
-            </div>
         </div>
     </div>
 </main>
 <footer class="my-5 pt-5 text-muted text-center text-small">
     <p class="mb-1">All credits to: </p>
     <ul class="list-inline">
-        <li class="list-inline-item"><a href="https://shrouded-chamber-34995.herokuapp.com/">our teacher's website!</a>
-        </li>
+        <li class="list-inline-item"><a href="https://shrouded-chamber-34995.herokuapp.com/">our teacher's website!</a></li>
     </ul>
     <form action="/logout" method="POST">
         <button>Logout</button>
     </form>
 </footer>
+
 <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -136,3 +118,4 @@
 
 </body>
 </html>
+
