--- a/public/front/adminPage/read.ejs
+++ b/public/front/adminPage/read.ejs
@@ -15,11 +15,26 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="css/headers.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="../../css_files/binarasAttempt.css">
 </head>
 <body>
+<div class="navnav">
+    <div class="nav-header">
+        <div class="nav-title">
+            DAMA
+        </div>
+    </div>
 
+    <div class="nav-links">
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </div>
+</div>
 <main>
     <div class="container">
         <header class="d-flex justify-content-center py-3">
