--- a/public/front/sellerPage/createProd.ejs
+++ b/public/front/sellerPage/createProd.ejs
@@ -15,19 +15,35 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="css/headers.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../css_files/binarasAttempt.css">
 </head>
 <body>
+<div class="navnav">
+    <div class="nav-header">
+        <div class="nav-title">
+            DAMA
+        </div>
+    </div>
 
+    <div class="nav-links">
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </div>
+</div>
 <main>
     <div class="container">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/admin" class="nav-link active" aria-current="page">Create</a></li>
-                <li class="nav-item"><a href="/admin/read" class="nav-link">Read</a></li>
-                <li class="nav-item"><a href="/admin/find" class="nav-link">Find</a></li>
-                <li class="nav-item"><a href="/admin/update" class="nav-link">Update</a></li>
-                <li class="nav-item"><a href="/admin/delete" class="nav-link">Delete</a></li>
+                <li class="nav-item"><a href="/seller/profile" class="nav-link">My profile</a></li>
+                <li class="nav-item"><a href="/seller/create" class="nav-link active" aria-current="page">Create new</a></li>
+<!--                <li class="nav-item"><a href="/seller/stock" class="nav-link">Change Stock</a></li>-->
+                <li class="nav-item"><a href="/seller/update" class="nav-link">Update</a></li>
+                <li class="nav-item"><a href="/seller/delete" class="nav-link">Delete</a></li>
             </ul>
         </header>
     </div>
@@ -40,46 +56,48 @@
             <p style="color: red;"><%= err %></p>
         <% } %>
         <div class="col-md-7 col-lg-8">
-            <h4 class="mb-3">Create Seller</h4>
-            <h6 class="mb-3">Hello admin '<%=username%>'!</h6>
-            <form action="/admin" class="needs-validation" method="POST">
+            <h4 class="mb-3">Create Product</h4>
+            <h6 class="mb-3">Hello seller '<%= username %>'!</h6>
+            <form action="/seller/create" class="needs-validation" method="POST">
                 <div class="row g-3">
                     <div class="col-sm-6">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="text" class="form-control" name="email" id="email" placeholder="" value=""
+                        <label for="name" class="form-label">Product name</label>
+                        <input type="text" class="form-control" name="name" id="name" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
-                            Valid email is required.
+                            Valid name is required.
                         </div>
                     </div>
 
                     <div class="col-sm-6">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" name="username" id="username" placeholder="" value=""
-                               required>
+                        <label for="type" class="form-label">Type</label>
+                        <select name="type">
+                            <option value="shoes">Shoes</option>
+                            <option value="clothes">Clothes</option>
+                            <option value="acc">Accessories</option>
+                        </select>
                         <div class="invalid-feedback">
-                            Valid username is required.
+                            Valid type is required.
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <label for="phone" class="form-label">Phone</label>
-                        <input type="number" class="form-control" name="phone" id="phone" placeholder="" value=""
+                        <label for="price" class="form-label">Price</label>
+                        <input type="number" class="form-control" name="price" id="price" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
-                            Valid phone is required.
+                            Valid price is required.
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="" value=""
+                        <label for="quantity" class="form-label">Quantity</label>
+                        <input type="number" class="form-control" name="quantity" id="quantity" placeholder="" value=""
                                required>
                         <div class="invalid-feedback">
-                            Valid password is required.
+                            Valid quantity is required.
                         </div>
                     </div>
                 </div>
                 <br>
-
                 <button class="w-100 btn btn-primary btn-lg" type="submit">Create</button>
             </form>
         </div>
@@ -88,7 +106,8 @@
 <footer class="my-5 pt-5 text-muted text-center text-small">
     <p class="mb-1">All credits to: </p>
     <ul class="list-inline">
-        <li class="list-inline-item"><a href="https://shrouded-chamber-34995.herokuapp.com/">our teacher's website!</a></li>
+        <li class="list-inline-item"><a href="https://shrouded-chamber-34995.herokuapp.com/">our teacher's website!</a>
+        </li>
     </ul>
     <form action="/logout" method="POST">
         <button>Logout</button>
