--- a/public/front/sellerPage/updateProd.ejs
+++ b/public/front/sellerPage/updateProd.ejs
@@ -15,16 +15,32 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="css/headers.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../css_files/binarasAttempt.css">
 </head>
 <body>
+<div class="navnav">
+    <div class="nav-header">
+        <div class="nav-title">
+            DAMA
+        </div>
+    </div>
 
+    <div class="nav-links">
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/cloth">Clothes</a></li>
+            <li><a href="/shoes">Shoes</a></li>
+            <li><a href="/accessories">Accessories</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </div>
+</div>
 <main>
     <div class="container">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/seller/read" class="nav-link">My profile</a></li>
-                <li class="nav-item"><a href="/seller" class="nav-link">Create new</a></li>
+                <li class="nav-item"><a href="/seller/profile" class="nav-link">My profile</a></li>
+                <li class="nav-item"><a href="/seller/create" class="nav-link">Create new</a></li>
 <!--                <li class="nav-item"><a href="/seller/stock" class="nav-link">Change Stock</a></li>-->
                 <li class="nav-item"><a href="/seller/update" class="nav-link active" aria-current="page">Update</a></li>
                 <li class="nav-item"><a href="/seller/delete" class="nav-link">Delete</a>
